--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,4 +1,5 @@
 <form action="" ngForm="customForm">
-    <app-form-preview [controlsArray]="controlsArray">
+    <app-form-preview [controlsArray]="controlsArray" [inputsLevel]="'0'">
     </app-form-preview>
 </form>
+dd
