--- a/src/app/create/input-creator/input-creator.component.html
+++ b/src/app/create/input-creator/input-creator.component.html
@@ -67,7 +67,7 @@
             <div class="customBlock3"></div>
             <div class="customBlock4">
                 <button class="btn btn-primary"
-                        (click)="addSubInputToArray(controlsArray, i)">ADD SUB-INPUT
+                        (click)="addSubInputToArray(controlsArray, i, subinput)">ADD SUB-INPUT
                 </button>
                 <button class="btn btn-warn"
                         (click)="removeInputFromArray(controlsArray, i)">REMOVE
